# Registration_proj

./: .gitignore
src/Localization/FAST_LIO/: CMakeLists.txt
src/Localization/FAST_LIO/Log/: fast_lio_time_log.csv  mat_out.txt  mat_pre.txt  pos_log.txt
src/Localization/FAST_LIO/config/: avia.yaml
src/Localization/FAST_LIO/include/IKFoM_toolkit/esekfom/: esekfom.hpp
src/Localization/FAST_LIO/include/ikd-Tree/: ikd_Tree.h
src/Localization/FAST_LIO/launch/: lidar_run.launch  mapping_avia.launch  mapping_only.launch  mapping_with_driver.launch  odom_avia.launch  rviz.launch
src/Localization/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/Localization/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp
src/Localization/Registration/: CMakeLists.txt  package.xml
src/Localization/Registration/app/: l2l_registration_node.cpp  v2l_registration_node.cpp
src/Localization/Registration/config/: l2l.rviz  param.yaml  v2l.rviz
src/Localization/Registration/include/: utils.hpp
src/Localization/Registration/include/Registration/: registration_utils.hpp
src/Localization/Registration/include/utils/: registration.h
src/Localization/Registration/launch/: l2l_reg.launch  v2l_reg.launch
src/Localization/Registration/src/: registration.cpp
src/Localization/livox_ros_driver2/: CMakeLists.txt
src/Localization/livox_ros_driver2/config/: MID360_config.json  display_point_cloud_ROS1.rviz
src/Localization/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  rviz_MID360.launch
src/planner/swarm_bridge/: CMakeLists.txt
src/planner/swarm_bridge/include/: reliable_bridge.hpp
src/planner/swarm_bridge/launch/: bridge.rviz  bridge_tcp_drone.launch  bridge_tcp_station.launch
src/planner/swarm_bridge/src/: bridge_node_tcp.cpp
src/scripts/: pub_trigger.sh
